<resources>
    <string name="app_name">Soccer League</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Soccer League Resources -->
    <string name="league_table_label">Overall Standings</string>
    <string name="gen_table_col_1">Team Name</string>
    <string name="gen_table_col_2">W</string>
    <string name="gen_table_col_3">L</string>
    <string name="gen_table_col_4">D</string>
    <string name="gen_table_col_5">Win %</string>
    <string name="gen_table_col_6">T</string>
</resources>