<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/team_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="5"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/league_table_col_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_table_col_1" />
        <TextView
            android:id="@+id/league_table_col_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_table_col_2" />
        <TextView
            android:id="@+id/league_table_col_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_table_col_3" />
        <TextView
            android:id="@+id/league_table_col_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_table_col_4" />
        <TextView
            android:id="@+id/league_table_col_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gen_table_col_6" />
    <!-- app:layout_constraintBottom_toTopOf="@id/button_first"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" /> -->

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>